fix for bug #2191

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@12357 c90b9560-bf6c-de11-be94-00142212c4b1